--- a/resources/corpus/Untitled-1.ipynb
+++ b/resources/corpus/Untitled-1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "samples = []\n",
     "\n",
     "for _ in range(1000000):\n",
-    "    txt_ = np.random.choice(CHARS, np.random.randint(5,15)).tolist()\n",
+    "    txt_ = np.random.choice(CHARS, np.random.randint(5,15),replace=False).tolist()\n",
     "    txt = [c if np.random.random()>0.5 else c.upper() for c in txt_]\n",
     "    txt = ''.join(txt)\n",
     "    samples.append(txt)"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
